## $Id: Makefile.am,v 1.9 2006-06-28 13:26:18 adam Exp $

tabdatadir = $(datadir)/$(PACKAGE)$(PACKAGE_SUFFIX)/tab
tabdata_DATA = bib1.att dan1.att danmarc.abs danmarc.mar \
 default.idx explain.abs explain.att explain.tag generic.tag gils.abs \
 gils-a.est gils.att gils-b.est gils-f.est gils-g.est gils-summary.map \
 gils.tag gils-usmarc.map gils-variant.est hci.flt idxpath.att mail.flt \
 meta.abs meta-b.est meta.tag meta-usmarc.map news.flt numeric.chr \
 nwi.flt refer.flt scan.chr sgml.flt soif.flt string.chr summary.abs \
 summary.tag tagsetg.tag tagsetm.tag urx.chr usmarc.abs usmarc-b.est \
 usmarc.flt usmarc.mar usmarc.tag var1.var wais.abs wais-b.est \
 wais-variant.est marc21.abs

EXTRA_DIST = $(tabdata_DATA)

