# $Id: Makefile.am,v 1.1 2006-06-12 09:12:13 marc Exp $

EXTRA_DIST = zebra.cfg\
   MARC21slim2INDEX.xsl\
   MARC21slim2MADS.xsl\
   MARC21slim2MODS3-1.xsl\
   MARC21slim2MODS3.xsl\
   MARC21slim2SRWDC.xsl\
   MARC21slimUtils.xsl\
   collection-2.xml\
   collection-clasmrc.xml\
   collection-namemrc.xml\
   collection-opera-43.xml\
   collection-sandburg-1.xml\
   collection-subjmrc.xml\
   filter_alvis_conf.xml\
   identity.xsl\
   sandburg-1.xml\
   zebra.xsl


clean:
	rm -f *.mf *..LCK zebrasrv.pid

