
EXTRA_DIST = zebra.cfg\
   README\
   MARC21slim2INDEX.xsl\
   MARC21slim2MADS.xsl\
   MARC21slim2MODS3-1.xsl\
   MARC21slim2MODS3.xsl\
   MARC21slim2SRWDC.xsl\
   MARC21slimUtils.xsl\
   collection-2.xml\
   collection-clasmrc.xml\
   collection-namemrc.xml\
   collection-opera-43.xml\
   collection-sandburg-1.xml\
   collection-subjmrc.xml\
   dom-config.xml\
   identity.xsl\
   zebra.xsl


clean:
	rm -f *.mf *..LCK zebrasrv.pid

