# $Id: Makefile.am,v 1.10 2006-06-28 13:26:14 adam Exp $

zebraincludedir=$(includedir)/$(PACKAGE)$(PACKAGE_SUFFIX)/idzebra

zebrainclude_HEADERS=api.h version.h res.h recctrl.h data1.h recgrs.h \
 zebramap.h bfile.h dict.h isam-codec.h isams.h isamc.h isamb.h util.h \
 snippet.h api_swig.h flock.h

